	* FIX : draw unconnected trackpoints
	* ADD : multiple remove
	* ADD : save last current directory
	* ADD : draw landuse=forest area (by Raphael Studer)
	* ADD : move trackpoints onto a road inserts the point in the road
	* ADD : draw a lot of more things in merkaartor (by Matt Williams)
	* ADD : draw hospital area and node
	* ADD : nice amenity selector for nodes

v0.08
	* FIX : work with 0.5 API
	* ADD : move can now work on a complete way
	* ADD : non-transparant proxy support
	* ADD : change cursor when in move mode
	* FIX : recognize 1 in oneway key
	* FIX : slightly change default way width
	* FIX : undo/redo handling for manipulating tags
	* ADD : ability to draw icons on specific trackpoints
	* ADD : draw parking symbol from mapnik
	* ADD : tertiary highway type
	* FIX : tweak color scheme
	* ADD : cache road bounding box
	* FIX : draw parking surface
	* FIX : tab order of various widgets
	* ADD : slippy map coordinates selector
	* FIX : reuse slippy map cache between different invocations
	* FIX : improve download handling
	* ADD : join/split/break road actions
	* ADD : caching algorithm for editstylepainters
	* FIX : improve rendering on higher zoomed-out levels
	* ADD : drag box to select a group of elements
	* ADD : selection box when multiple features are selected
	* FIX : zoom with wheelbox as in Google maps
	* FIX : remove irrelevant menu item
	* ADD : import relations
	* ADD : view relations in the propertiesdock
	* ADD : track back to which features a feature belongs
	* FIX : compile warnings (by Elrond)
	* ADD : rendering according to correct priority
	* ADD : create relationships
	* FIX : also render relations where tags are on the individual
	roads
	* FIX : clean up code and compile warnings (by Elrond)
	
v0.07 18 aug 2007
	* ADD : nice mappaint mechanism
	* FIX : downloading same area twice doesn't create upload conflicts
	anymore
	* FIX : keep tag content when editing them in the tag table
	* FIX : correctly keep track of the tag table size